<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.wasapii.adisoftin.EditMyProfileActivity">


    <include layout="@layout/toolbar"> </include>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/thumbnail_first"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_black_transparent"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/thumbnail_second"
                    android:layout_width="40dp"
                    android:background="@drawable/rounded_black_transparent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>


                <ImageView
                    android:id="@+id/thumbnail_third"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:background="@drawable/rounded_black_transparent"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/thumbnail_fourth"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="gone"
                    android:background="@drawable/rounded_black_transparent"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/btn_add_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:text="+"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/light_blue"
                    android:gravity="center"
                    android:background="@drawable/rounded_blue_transparent_btn"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="Name : "
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />


                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:weightSum="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="Gender : "
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="Female"/>


                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="Age : "
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:maxLength="2"
                    android:inputType="number"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="What do you enjoy talking about?"
                android:paddingLeft="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.wasapii.adisoftin.customview.HashTagEditText
                    android:id="@+id/tag_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hastag"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/search_icon"
                    android:drawablePadding="5dp"
                    app:bubbleTextColor="@color/light_blue"
                    app:bubbleTextSize="16sp"
                    app:horizontalPadding="8dp"
                    app:horizontalSpacing="2dp"
                    app:maxSize="50"
                    app:verticalPadding="4dp"
                    app:verticalSpacing="2dp"
                    android:editable="false"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/music_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/music"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/lifestyle_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/lifestyle"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/animals_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/animals"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/sports_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/sports"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nonprofit_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Nonprofit"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/literature_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/literature"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/cinema_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Cinema"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/arts_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Arts"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/technology_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Technology"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>



                    <TextView
                        android:id="@+id/gaming_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Gaming"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/entertainment_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Entertainment"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/politics_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Politics"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>



                    <TextView
                        android:id="@+id/photography_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Photography"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                    <TextView
                        android:id="@+id/traveling_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_blue"
                        android:text="@string/Traveling"
                        android:padding="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/rounded_blue_transparent_btn"/>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save"
                        android:layout_alignParentRight="true"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:background="@drawable/rounded_blue_btn"
                        android:layout_gravity="right"/>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

